[project]
name = "lucidprint"
version = "0.1.0"
description = "A small Python utility library offering conditional styles for CLIs."
authors = [{name = "melih senlen"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
github = "https://github.com/eard3n1/lucidprint"